--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -3,10 +3,16 @@
 @import "bootstrap";
 
 @import "navbar";
+@import "footer";
 
 @import "forms";
 @import "typography";
+@import "images";
+@import "buttons";
 
 @import "pages";
+@import "sections";
 
 @import "blocks";
+@import "jumbotron";
+@import "cards";
