--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,13 +2,147 @@
 title: Graduate Management Training Scheme
 ---
 
-<div class="jumbotron">
+<section class="jumbotron">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
-        <h1>Art at STH</h1>
-        <p class="lead">This is a strapline</p>
+      <div class="col-md-7">
+        <div class="jumbotron-inner">
+          <h1>Graduate Management Training Scheme</h1>
+          <p class="lead">Help shape the future of the NHS</p>
+        </div>
+      </div>
+      
+      <div class="col-md-4 col-md-offset-1">
+        <div class="card card-colourful card-jumbotron">
+          <h2>Apply now</h2>
+          <p>
+            Are you ready to gain the skills, knowledge and confidence to make real improvements to the NHS?
+          </p>
+          <a class="btn btn-wire" href="#">Apply now</a>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</section>
+
+<section class="graduate-lead">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <p class="lead">We're launching an exciting new graduate management training scheme to grow and develop passionate, inspirational leaders of the future.</p>
+        <p>Over two years, you'll gain the skills, knowledge and confidence that will enable you to make real improvements at the frontline of the healthcare service and improve patient care.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="graduate-about">
+  <div class="container">
+    <div class="row">      
+      <div class="col-md-12">
+        <h2>About us</h2>
+      </div>
+      <div class="col-md-7">
+        <p>Sheffield Teaching Hospitals is one of the UK’s most successful NHS foundation trusts. We provide a full range of local hospital and community services for people in Sheffield, as well as specialist care for patients from further afield, including cancer, spinal cord injuries, renal and cardiothoracic services.</p>
+        <p>We have an ambitious vision to be recognised as the best provider of health, clinical research and education in the UK and a strong contributor to the aspiration of Sheffield to be a vibrant and healthy city.</p>
+        <p>Join us as a graduate management trainee and help make that vision a reality!</p>
+      </div>    
+      <div class="col-md-5">
+        <%= image_tag "stock-one.jpg", class: "img-responsive" %>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="graduate-scheme">
+  <div class="container">
+    <div class="row">      
+      <div class="col-md-12">
+        <h2>The scheme</h2>
+      </div>
+      
+      <div class="col-md-7">
+        <p>We’re offering a two year management training programme which will provide you with a rich experience helping lead the future of the NHS at Sheffield Teaching Hospitals.</p>
+        <p>The scheme will provide you with the skills, experiences and personal qualities you need to be a big success. Supported every step of the way by a buddy, mentor and our managers, you’ll take on new responsibilities from the very start and be given the chance to manage teams and projects.</p>
+        <p>During the scheme you’ll also be enrolled in the NHS Leadership Academy Mary Seacole programme and provided with their formal six month leadership development programme.</p>
+      </div>
+      
+      <div class="col-md-5">
+        <%= image_tag "stock-one.jpg", class: "img-responsive" %>
+      </div>
+      
+      <div class="col-md-7">
+        
+        <p>Doing the right thing for our patients, staff and the wider public and is what drives us and we’ll expect you to share our values. Successful candidates will:</p>
+        <ul>
+          <li>Be excellent communicators and able to form productive relationships and networks across departments within the Trust</li>
+          <li>Have excellent organisational skills </li>
+          <li>Be a self-starter and able to work on own initiative</li>
+          <li>Have a real interest in the NHS and a desire to contribute to its future success</li>
+          <li>Have a desire to learn new skills and undertake formal study leading to management and leadership qualifications</li>
+        </ul>  
+        
+        <p>We are looking for strong team players from a variety of backgrounds, committed to the values of the NHS, with the passion, drive and ability to influence and deliver at all levels.  </p>
+        <p>We are committed to recruiting people from a range of different backgrounds and would particularly welcome applications from candidate’s underrepresented in leadership roles.</p>
+      </div>    
+      <div class="col-md-5">
+        <%= image_tag "stock-two.jpg", class: "img-responsive img-headroom" %>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="graduate-apply">
+  <div class="container">
+    <div class="row">      
+      <div class="col-md-12">
+        <h2>Apply now</h2>
+      </div>
+      
+      <div class="col-md-7">
+        <p>More details about the graduate management training scheme can be found in the attached job description and person specification.</p>
+        <p>If you have any questions or would like to register your interest, <a href="#">contact us by emailing x</a></p>
+      </div>    
+      <div class="col-md-5">
+        <%= image_tag lorem.image('500x300'), class: "img-responsive" %>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="graduate-stories">
+  <div class="container">
+    <div class="row">
+      
+      <div class="col-md-4">
+        <div class="card">
+          <%= image_tag lorem.image('500x300'), class: "img-responsive" %>
+          <h3>Sir Andrew Cash</h3>
+          <p><%= lorem.sentences 3 %></p>
+          <a href="#"><%= lorem.sentence %></a>
+        </div>
+      </div>
+      
+      <div class="col-md-4">
+        <div class="card">
+          <%= image_tag lorem.image('500x300'), class: "img-responsive" %>
+          <h3>Sir Andrew Cash</h3>
+          <p><%= lorem.sentences 3 %></p>
+          <a href="#"><%= lorem.sentence %></a>
+        </div>
+      </div>
+      
+      <div class="col-md-4">
+        <div class="card">
+          <%= image_tag lorem.image('500x300'), class: "img-responsive" %>
+          <h3>Sir Andrew Cash</h3>
+          <p><%= lorem.sentences 3 %></p>
+          <a href="#"><%= lorem.sentence %></a>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+</section>
+
