--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -12,12 +12,13 @@ $gray-lighter:           lighten($gray-base, 93.5%); // #eee
 $brand-primary:         #005EB8;
 $brand-secondary:       #00A499;
 $brand-success:         #78BE20;
-$brand-info:            #0072ce;
+$brand-info:            #105190;
 $brand-warning:         #ED8B00;
 $brand-danger:          #ca0e00;
 $brand-grey:            #EDEDED;
 $brand-grey-dark:       #425563;
 $brand-grey-mid:        #768692;
+$brand-grey-light:      #d6dfe6;
 
 //== Scaffolding
 //
@@ -46,7 +47,7 @@ $font-family-serif:       Georgia, "Times New Roman", Times, serif;
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 $font-family-base:        $font-family-sans-serif;
 
-$font-size-base:          16px;
+$font-size-base:          18px;
 $font-size-large:         ceil(($font-size-base * 1.25)); // ~18px
 $font-size-small:         ceil(($font-size-base * 0.85)); // ~12px
 
@@ -406,7 +407,7 @@ $navbar-inverse-toggle-border-color:        transparent;
 //##
 
 //=== Shared nav styles
-$nav-link-padding:                          8px 12px;
+$nav-link-padding:                          8px 15px;
 $nav-link-hover-bg:                         $gray-lighter;
 
 $nav-disabled-link-color:                   $gray-light;
@@ -473,9 +474,9 @@ $pager-disabled-color:                 $pagination-disabled-color;
 
 $jumbotron-padding:              30px;
 $jumbotron-color:                inherit;
-$jumbotron-bg:                   #FFF;
-$jumbotron-heading-color:        $headings-color;
-$jumbotron-font-size:            ceil(($font-size-base * 1.5));
+$jumbotron-bg:                   $brand-grey-dark;
+$jumbotron-heading-color:        #FFF;
+$jumbotron-font-size:            ceil(($font-size-base * 1.2));
 
 
 //== Form states and alerts
