--- a/source/stylesheets/_navbar.scss
+++ b/source/stylesheets/_navbar.scss
@@ -19,3 +19,17 @@
   font-weight: 700;
   
 }
+
+.navbar-toggle {
+  
+  margin: 15px;
+  float: left;
+  
+}
+
+.navbar-btn {
+  
+  float: right;
+  margin-right: 15px;
+  
+}
