--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,16 +9,17 @@ title: Graduate Management Training Scheme
         <div class="jumbotron-inner">
           <h1>Graduate Management Training Scheme</h1>
           <p class="lead">Help shape the future of the NHS</p>
+          <%= link_to "Find out more", "/index.html#scheme", class: "btn btn-lg btn-headroom btn-success visible-xs" %>
         </div>
       </div>
       
       <div class="col-md-4 col-md-offset-1">
-        <div class="card card-colourful card-jumbotron">
+        <div class="card card-colourful card-jumbotron hidden-xs">
           <h2>Apply now</h2>
           <p>
             Are you ready to gain the skills, knowledge and confidence to make real improvements to the NHS?
           </p>
-          <a class="btn btn-wire" href="#">Apply now</a>
+          <a class="btn btn-block btn-wire" href="#apply">Apply now</a>
         </div>
       </div>
     </div>
@@ -36,11 +37,11 @@ title: Graduate Management Training Scheme
   </div>
 </section>
 
-<section class="graduate-about">
+<section class="graduate-about" id="about">
   <div class="container">
     <div class="row">      
       <div class="col-md-12">
-        <h2>About us</h2>
+        <h2 class="header-lg-space">About us</h2>
       </div>
       <div class="col-md-7">
         <p>Sheffield Teaching Hospitals is one of the UK’s most successful NHS foundation trusts. We provide a full range of local hospital and community services for people in Sheffield, as well as specialist care for patients from further afield, including cancer, spinal cord injuries, renal and cardiothoracic services.</p>
@@ -55,11 +56,11 @@ title: Graduate Management Training Scheme
 </section>
 
 
-<section class="graduate-scheme">
+<section class="graduate-scheme" id="theScheme">
   <div class="container">
     <div class="row">      
       <div class="col-md-12">
-        <h2>The scheme</h2>
+        <h2 class="header-lg-space">The scheme</h2>
       </div>
       
       <div class="col-md-7">
@@ -69,7 +70,11 @@ title: Graduate Management Training Scheme
       </div>
       
       <div class="col-md-5">
-        <%= image_tag "stock-one.jpg", class: "img-responsive" %>
+        <%= image_tag "stock-two.jpg", class: "img-responsive" %>
+      </div>
+      
+      <div class="col-md-12">
+        <h2 class="header-lg-space">About you</h2>
       </div>
       
       <div class="col-md-7">
@@ -85,63 +90,122 @@ title: Graduate Management Training Scheme
         
         <p>We are looking for strong team players from a variety of backgrounds, committed to the values of the NHS, with the passion, drive and ability to influence and deliver at all levels.  </p>
         <p>We are committed to recruiting people from a range of different backgrounds and would particularly welcome applications from candidate’s underrepresented in leadership roles.</p>
+        <p>The 2 year programme will commence on 16 October 2017 and all successful candidates must be available to commence in post on this date.</p>
       </div>    
       <div class="col-md-5">
-        <%= image_tag "stock-two.jpg", class: "img-responsive img-headroom" %>
+        <div class="card card-colourful card-feature card-reasons">
+          <h3>In numbers</h3>
+          <ol class="list-unstyled list-featured">
+            <li>
+              <span class="mega">2</span> year course
+            </li>
+            
+            <li>
+              <span class="mega">£22K</span> starting salary
+            </li>
+            
+            <li>
+              <span class="mega">2:2</span> degree or above
+            </li>
+            
+            <li>
+              <span class="mega">27</span> days annual leave
+            </li>
+          </ol>
+
+        </div>
       </div>
     </div>
   </div>
 </section>
 
-<section class="graduate-apply">
+<section class="graduate-apply" id="apply">
   <div class="container">
     <div class="row">      
+      
       <div class="col-md-12">
-        <h2>Apply now</h2>
+        <h2 class="header-lg-space">Apply now</h2>
       </div>
       
       <div class="col-md-7">
-        <p>More details about the graduate management training scheme can be found in the attached job description and person specification.</p>
+        <p>More details about the graduate management training scheme can be found in our <a href="#">job description and person specification</a>.</p>
         <p>If you have any questions or would like to register your interest, <a href="#">contact us by emailing x</a></p>
-      </div>    
-      <div class="col-md-5">
-        <%= image_tag lorem.image('500x300'), class: "img-responsive" %>
+        <p>Please note that the 2 year programme will commence on 16 October 2017 and all successful candidates must be available to commence in post on this date.</p>
       </div>
+      
+      <div class="col-md-5">
+      
+      </div>
+      
+      <div class="col-md-12">
+        <h2 class="header-lg-space">Application process</h2>
+      </div>
+      
+      <div class="col-md-4">
+        <h3 class="graduate-step" id="step1">1.</h3>
+        <h4>Online application</h4>
+        <p>Your application must be submitted via <a>the NHS Jobs by completing the online application form</a>. Candidates are encouraged to read the associated documentation prior to completing and submitting their application.</p>
+        <p>Applications will be reviewed within 14 days from the advertisement being closed. If you successfully demonstrate how you meet the essential criteria you will be shortlisted to progress further through the application process.</p>
+      </div>
+      
+      <div class="col-md-4">
+        <h3 class="graduate-step" id="step2">2.</h3>
+        <h4>Assessment centre</h4>
+        <p>Shortlisted candidates will progress through the selection process, including attendance at an assessment centre on the 14 July 2017.</p>
+        <p>We will select 30 candidates to progress through to the assessment centre stage. During the assessment centre, participants will be required to complete a variety of exercises and will undergo a panel interview. </p>
+      </div>
+      
+      <div class="col-md-4">
+        <h3 class="graduate-step" id="step3">3.</h3>
+        <h4>Pre-employment checks</h4>
+        <p>Within 7 days of the assessment centre, the successful trainees will be informed that they have secured a conditional offer of a place on the graduate trainee management scheme. </p>
+        <p>A programme of clearance checks will commence for the successful candidates and upon successful clearance through pre-employment checks your confirmed offer of employment will be made.</p>
+      </div>
+      
+      <div class="col-md-12">
+        <div class="card card-colourful card-feature card-cta">
+          <h3 id="">Interested?</h3>
+          <h4>Apply now</h4>
+          <p>
+            Gain the skills, knowledge and confidence to make real improvements to the NHS.
+          </p>
+          <a class="btn btn-wire" href="#">Help shape the future of the NHS</a>
+        </div>
+      </div>
+      
     </div>
   </div>
 </section>
 
-<section class="graduate-stories">
+<section class="graduate-stories" id="profiles">
   <div class="container">
     <div class="row">
-      
-      <div class="col-md-4">
-        <div class="card">
-          <%= image_tag lorem.image('500x300'), class: "img-responsive" %>
-          <h3>Sir Andrew Cash</h3>
-          <p><%= lorem.sentences 3 %></p>
-          <a href="#"><%= lorem.sentence %></a>
+      <div class="col-md-12">
+        <h2 class="header-lg-space">Featured profiles</h2>
+        <p>At Sheffield Teaching Hospitals NHS Foundation Trust we strive for excellence. This drives our continued commitment to develop great leaders and we firmly believe in the benefits of ‘growing our own’.</p>
+        <p>Many of our present leaders launched their careers through similar NHS management schemes including our current Chief Executive Sir Andrew Cash. You can find some below we introduce you to a few of these people below, they share with you their stories of career journeys and experiences along the way.</p>
+        
+        <div class="row">
+          <div class="col-md-4">
+            
+            <% link_to "andrew-cash.html" do %>
+              <%= image_tag "cash_ward_4_sm.jpg", class: "img-responsive" %>
+            <% end %>
+            <h3 class="graduate-profile"><%= link_to "Sir Andrew Cash OBE", "andrew-cash.html" %></h3>
+            <p>I completed the National NHS Graduate Management Training Scheme at the beginning of my career having left University and found it a wonderful entrance into the National Health Service... <a href="#">Read more</a></p>
+            
+          </div>
+          
+          <div class="col-md-4">
+            
+          </div>
+          
+          <div class="col-md-4">
+            
+          </div>
         </div>
+       
       </div>
-      
-      <div class="col-md-4">
-        <div class="card">
-          <%= image_tag lorem.image('500x300'), class: "img-responsive" %>
-          <h3>Sir Andrew Cash</h3>
-          <p><%= lorem.sentences 3 %></p>
-          <a href="#"><%= lorem.sentence %></a>
-        </div>
-      </div>
-      
-      <div class="col-md-4">
-        <div class="card">
-          <%= image_tag lorem.image('500x300'), class: "img-responsive" %>
-          <h3>Sir Andrew Cash</h3>
-          <p><%= lorem.sentences 3 %></p>
-          <a href="#"><%= lorem.sentence %></a>
-        </div>
-      </div>
-      
     </div>
   </div>
 </section>
