--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -1,20 +1,11 @@
 <footer class="footer-sitewide">
   <div class="container">
     <div class="row">
-      <div class="col-md-3">
-        <h3>About</h3>
-      </div>
-      
-      <div class="col-md-3">
-        <h3>Training scheme</h3>
-      </div>
-      
-      <div class="col-md-3">
-        <h3>Contact us</h3>
-      </div>
-      
-      <div class="col-md-3">
-        <h3>Apply now</h3>
+      <div class="col-md-12">
+        <hr>
+        <ul class="list-inline">
+          <li><a href="#">A list item</a></li>
+        </ul>
       </div>
     </div>
   </div>
