--- a/source/partials/_navbar.html.erb
+++ b/source/partials/_navbar.html.erb
@@ -1,10 +1,10 @@
 <div class="banner">
   <div class="container">
     <div class="row">
-      <div class="col-md-8 col-xs-6">
-        hi there
+      <div class="col-md-8 col-xs-4">
+        
       </div>
-      <div class="col-md-4 col-xs-6">
+      <div class="col-md-4 col-xs-8">
         <%= image_tag "sth_logo_blue_tight.png", class: "img-responsive img-brand" %>
       </div>
     </div>
@@ -15,6 +15,8 @@
     <div class="row">
     <div class="navbar-header">
       
+      <%= link_to "Apply now", "/index.html#apply", class: "btn btn-primary btn-wire navbar-btn navbar-right hidden-sm hidden-md hidden-lg" %>
+
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -22,13 +24,22 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">The scheme</a></li>
-        <li><a href="#">How to Apply</a></li>
+        <li class="active">
+          <%= link_to "Home", "/index.html" %>
+        </li>
+        <li>
+          <%= link_to "About us", "/index.html#about" %>
+        </li>
+        <li>
+          <%= link_to "The Scheme", "/index.html#theScheme" %>
+        </li>
+        <li>
+          <%= link_to "Apply now", "/index.html#apply" %>
+        </li>
       </ul>
     </div>
       </div>
