--- a/source/stylesheets/_typography.scss
+++ b/source/stylesheets/_typography.scss
@@ -42,3 +42,14 @@ body {
   line-height: 1.3;
   
 }
+
+.graduate-step {
+  
+  text-decoration: overline;
+  
+}
+
+.header-lg-space {
+  
+  padding: 0.5em 0;
+}
