--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -11,7 +11,7 @@ $gray-lighter:           lighten($gray-base, 93.5%); // #eee
 
 $brand-primary:         #005EB8;
 $brand-secondary:       #00A499;
-$brand-success:         #78BE20;
+$brand-success:         #009688;
 $brand-info:            #105190;
 $brand-warning:         #ED8B00;
 $brand-danger:          #ca0e00;
