add thumbnail card

--- a/source/stylesheets/_typography.scss
+++ b/source/stylesheets/_typography.scss
@@ -54,6 +54,18 @@ body {
   padding: 0.5em 0;
 }
 
+// Graduate profile cards
+
+.graduate-profile {
+  
+  h3 {
+    
+    font-size: 25px;
+    margin: 0.5em 0;
+    
+  }
+}
+
 
 // Graduate application step indicators in the H4 Area. Changes from side to down arrow on mobile
 
