--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -187,29 +187,21 @@ title: Graduate Management Training Scheme
         <p>Many of our present leaders launched their careers through similar NHS management schemes including <%= link_to "our current Chief Executive Sir Andrew Cash", "/andrew-cash.html" %>.</p>
         
         <div class="row">
-          <div class="col-md-4">
-            
-            <article class="graduate-profile">
-              <header>
-              
-              </header>
+          
+          <div class="col-sm-6 col-md-4">
+            <article class="thumbnail graduate-profile">     
+              <section>
+                <% link_to "andrew-cash.html" do %>
+                  <%= image_tag "Andrew Cash Grad Scheme.jpg", class: "img-responsive", alt: "Sir Andrew Cash OBE" %>
+                <% end %>
+                <div class="caption">
+                  <h3 class="graduate-profile"><%= link_to "Sir Andrew Cash OBE", "/andrew-cash.html" %></h3>
+                  <p>I completed the National NHS Graduate Management Training Scheme ... <a href="#">Read more</a></p>
+                </div>
+              </section>
             </article>
-            
-            <% link_to "andrew-cash.html" do %>
-              <%= image_tag "cash_ward_4_sm.jpg", class: "img-responsive" %>
-            <% end %>
-            <h3 class="graduate-profile"><%= link_to "Sir Andrew Cash OBE", "/andrew-cash.html" %></h3>
-            <p>I completed the National NHS Graduate Management Training Scheme at the beginning of my career having left University and found it a wonderful entrance into the National Health Service... <a href="#">Read more</a></p>
-            
           </div>
-          
-          <div class="col-md-4">
-            
-          </div>
-          
-          <div class="col-md-4">
-            
-          </div>
+
         </div>
        
       </div>
