Add Andrew Cash alt layout

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -188,6 +188,34 @@ title: Graduate Management Training Scheme
         
         <div class="row">
           
+          <div class="col-sm-6 col-md-8">
+            <article class="thumbnail graduate-profile">     
+              <section>
+                <% link_to "andrew-cash.html" do %>
+                  <%= image_tag "Andrew Cash Grad Scheme.jpg", class: "img-responsive", alt: "Sir Andrew Cash OBE" %>
+                <% end %>
+                <div class="caption">
+                  <h3 class="graduate-profile"><%= link_to "Sir Andrew Cash OBE", "/andrew-cash.html" %></h3>
+                  <p>I completed the National NHS Graduate Management Training Scheme ... <a href="#">Read more</a></p>
+                </div>
+              </section>
+            </article>
+          </div>
+
+          <div class="col-sm-6 col-md-4">
+            <article class="thumbnail graduate-profile">     
+              <section>
+                <% link_to "andrew-cash.html" do %>
+                  <%= image_tag "Andrew Cash Grad Scheme.jpg", class: "img-responsive", alt: "Sir Andrew Cash OBE" %>
+                <% end %>
+                <div class="caption">
+                  <h3 class="graduate-profile"><%= link_to "Sir Andrew Cash OBE", "/andrew-cash.html" %></h3>
+                  <p>I completed the National NHS Graduate Management Training Scheme ... <a href="#">Read more</a></p>
+                </div>
+              </section>
+            </article>
+          </div>
+
           <div class="col-sm-6 col-md-4">
             <article class="thumbnail graduate-profile">     
               <section>
