change scheme name

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Graduate Management Training Scheme
+title: Graduate Management Scheme
 ---
 
 <section class="jumbotron">
@@ -7,7 +7,7 @@ title: Graduate Management Training Scheme
     <div class="row">
       <div class="col-md-7">
         <div class="jumbotron-inner">
-          <h1>Graduate Management Training Scheme</h1>
+          <h1>Graduate Management Scheme</h1>
           <p class="lead">Help shape the future of the NHS</p>
           <%= link_to "Find out more", "/index.html#theScheme", class: "btn btn-lg btn-headroom btn-success visible-xs visible-sm" %>
         </div>
@@ -30,7 +30,7 @@ title: Graduate Management Training Scheme
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <p class="lead">We're launching an exciting new graduate management training scheme to grow and develop passionate, inspirational leaders of the future.</p>
+        <p class="lead">We're launching an exciting new graduate management scheme to grow and develop passionate, inspirational leaders of the future.</p>
         <p>Over two years, you'll gain the skills, knowledge and confidence that will enable you to make real improvements at the frontline of the healthcare service and improve patient care.</p>
       </div>
     </div>
@@ -129,7 +129,7 @@ title: Graduate Management Training Scheme
       </div>
       
       <div class="col-md-7">
-        <p>More details about the graduate management training scheme can be found in our <a href="#">job description and person specification</a>.</p>
+        <p>More details about the graduate management scheme can be found in our <a href="#">job description and person specification</a>.</p>
         <p>If you have any questions or would like to register your interest, <a href="#">contact us by emailing x</a></p>
         <p>Please note that the 2 year programme will commence on 16 October 2017 and all successful candidates must be available to commence in post on this date.</p>
       </div>
@@ -196,7 +196,7 @@ title: Graduate Management Training Scheme
                 <% end %>
                 <div class="caption">
                   <h3 class="graduate-profile"><%= link_to "Sir Andrew Cash OBE", "/andrew-cash.html" %></h3>
-                  <p>I completed the National NHS Graduate Management Training Scheme ... <a href="#">Read more</a></p>
+                  <p>I completed the National NHS Graduate Management Scheme ... <a href="#">Read more</a></p>
                 </div>
               </section>
             </article>
@@ -210,7 +210,7 @@ title: Graduate Management Training Scheme
                 <% end %>
                 <div class="caption">
                   <h3 class="graduate-profile"><%= link_to "Sir Andrew Cash OBE", "/andrew-cash.html" %></h3>
-                  <p>I completed the National NHS Graduate Management Training Scheme ... <a href="#">Read more</a></p>
+                  <p>I completed the National NHS Graduate Management Scheme ... <a href="#">Read more</a></p>
                 </div>
               </section>
             </article>
@@ -224,7 +224,7 @@ title: Graduate Management Training Scheme
                 <% end %>
                 <div class="caption">
                   <h3 class="graduate-profile"><%= link_to "Sir Andrew Cash OBE", "/andrew-cash.html" %></h3>
-                  <p>I completed the National NHS Graduate Management Training Scheme ... <a href="#">Read more</a></p>
+                  <p>I completed the National NHS Graduate Management Scheme ... <a href="#">Read more</a></p>
                 </div>
               </section>
             </article>
