--- a/source/partials/_topbar.html.erb
+++ b/source/partials/_topbar.html.erb
@@ -3,8 +3,8 @@
     <div class="row">
     <div id="topbar" class="">
       <ul class="nav navbar-nav navbar-topbar-nav">
-        <li><a href="#">Information for staff</a></li>
-        <li><a href="#">Donate</a></li>
+        <li><a href="#">Apply now</a></li>
+        <li><%= link_to "Download application booklet", "./documents/Sheffield Teaching Hospitals NHS Foundation Trust Graduate Management Scheme.pdf" %></li>
         <li><a href="#">Contact us</a></li>
       </ul>
     </div>
