add thumbnail to main body and download to booklet

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -135,7 +135,9 @@ title: Graduate Management Scheme
       </div>
       
       <div class="col-md-5">
-      
+        <% link_to "./documents/Sheffield Teaching Hospitals NHS Foundation Trust Graduate Management Scheme.pdf" do %>
+          <%= image_tag "thumbnail.jpg", class: "img-responsive" %>
+        <% end %>
       </div>
       
       <div class="col-md-12">
