--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -134,7 +134,7 @@ title: Graduate Management Scheme
         <p>Please note that the 2 year programme will commence on 16 October 2017 and all successful candidates must be available to commence in post on this date.</p>
       </div>
       
-      <div class="col-md-5">
+      <div class="col-md-4 col-md-offset-1">
         <% link_to "./documents/Sheffield Teaching Hospitals NHS Foundation Trust Graduate Management Scheme.pdf" do %>
           <%= image_tag "thumbnail.jpg", class: "img-responsive" %>
         <% end %>
