--- a/source/stylesheets/_navbar.scss
+++ b/source/stylesheets/_navbar.scss
@@ -12,14 +12,6 @@
     
 }
 
-.nav > li > a {
-  
-  position: relative;
-  display: block;
-  font-weight: 700;
-  
-}
-
 .navbar-toggle {
   
   margin: 15px;
@@ -31,5 +23,38 @@
   
   float: right;
   margin-right: 15px;
+  
+}
+
+.nav > li > a {
+  
+  position: relative;
+  display: block;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-weight: 700;
+  
+}
+
+.navbar-header-home {
+  
+  margin: 18px 15px 15px 15px;
+  float: left;
+  
+}
+
+.navbar-topbar-nav > li > a {
+  
+  position: relative;
+  display: block;
+  padding: 2px 10px;
+  font-weight: 400;
+  
+}
+
+.navbar-topbar {
+  
+  min-height: 10px;
+  margin-bottom: 0px;
   
 }
