Update navbar to sth standard

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -346,7 +346,7 @@ $container-lg:                 $container-large-desktop;
 //##
 
 // Basics of a navbar
-$navbar-height:                    64px;
+$navbar-height:                    50px;
 $navbar-margin-bottom:             $line-height-computed;
 $navbar-border-radius:             0;
 $navbar-padding-horizontal:        floor(($grid-gutter-width / 2));
@@ -354,13 +354,13 @@ $navbar-padding-vertical:          (($navbar-height - $line-height-computed) / 2
 $navbar-collapse-max-height:       340px;
 
 $navbar-default-color:             $gray-light;
-$navbar-default-bg:                #fff;
+$navbar-default-bg:                $brand-grey;
 $navbar-default-border:            transparent;
 
 // Navbar links
 $navbar-default-link-color:                $gray;
 $navbar-default-link-hover-color:          $gray-dark;
-$navbar-default-link-hover-bg:             transparent;
+$navbar-default-link-hover-bg:             darken($navbar-default-bg, 6.5%);
 $navbar-default-link-active-color:         $gray-dark;
 $navbar-default-link-active-bg:            darken($navbar-default-bg, 6.5%);
 $navbar-default-link-disabled-color:       #ccc;
@@ -386,7 +386,7 @@ $navbar-inverse-border:                     transparent;
 // Inverted navbar links
 $navbar-inverse-link-color:                 #fff;
 $navbar-inverse-link-hover-color:           #fff;
-$navbar-inverse-link-hover-bg:              transparent;
+$navbar-inverse-link-hover-bg:              darken($navbar-inverse-bg, 10%);
 $navbar-inverse-link-active-color:          $navbar-inverse-link-hover-color;
 $navbar-inverse-link-active-bg:             darken($navbar-inverse-bg, 10%);
 $navbar-inverse-link-disabled-color:        #444;
