reduce size of topbar to communicate hierarchy

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -129,8 +129,8 @@ title: Graduate Management Scheme
       </div>
       
       <div class="col-md-7">
-        <p>More details about the graduate management scheme can be found in our <a href="#">job description and person specification</a>.</p>
-        <p>If you have any questions or would like to register your interest, <a href="#">contact us by emailing x</a></p>
+        <p>More details about the graduate management scheme can be found in our <%= link_to "job description and person specification", "./documents/Sheffield Teaching Hospitals NHS Foundation Trust Graduate Management Scheme.pdf" %>.</p>
+        <p>If you have any questions or would like to register your interest, <a href="mailto:GraduateScheme@sth.nhs.uk">contact us by emailing GraduateScheme@sth.nhs.uk</a></p>
         <p>Please note that the 2 year programme will commence on 16 October 2017 and all successful candidates must be available to commence in post on this date.</p>
       </div>
       
