--- a/source/partials/_topbar.html.erb
+++ b/source/partials/_topbar.html.erb
@@ -4,7 +4,7 @@
     <div id="topbar" class="">
       <ul class="nav navbar-nav navbar-topbar-nav">
         <li><%= link_to "Download application booklet", "./documents/Sheffield Teaching Hospitals NHS Foundation Trust Graduate Management Scheme.pdf" %></li>
-        <li><a href="#">Contact us</a></li>
+        <li><a href="mailto:GraduateScheme@sth.nhs.uk">Contact us</a></li>
       </ul>
     </div>
     </div>
