--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -4,7 +4,9 @@
       <div class="col-md-12">
         <hr>
         <ul class="list-inline">
-          <li><a href="#">A list item</a></li>
+          <li>Copyright 2017 Sheffield Teaching Hospitals NHS Foundation Trust</li>
+          <li><a href="http://www.sth.nhs.uk">www.sth.nhs.uk</a></li>
+          <li><a href="http://www.sth.nhs.uk/cookie-policy">Cookie Policy</a></li>
         </ul>
       </div>
     </div>
