add andrew cash profile info

--- a/source/andrew-cash.html.erb
+++ b/source/andrew-cash.html.erb
@@ -22,15 +22,15 @@ title: Andrew Cash
       </ol>
     </div>
     
-    <div class="col-md-7">
-      <p class="lead">The Arts in Health team at Sheffield Teaching Hospitals run a weekly programme of arts &amp; crafts sessions delivered by a dedicated team of arts activity volunteers, an arts coordinator and arts activity project leaders.&nbsp;</p>
-      <p>The sessions are designed to give patients who are recovering from life changing injuries, illnesses or surgery - including elderly patients with dementia - a chance to learn new skills, enjoy each other’s’ company and be distracted from pain or discomfort.&nbsp; Patients frequently tell us that the sessions are friendly, inclusive, calming and fun. &nbsp;</p>
-      <p>We also run a monthly music programme that brings entertainment and light relief to our patients. All the musicians are professionally trained and highly skilled in engaging patients within their performances. It is a joy to watch patients and staff join in.</p>
-      <p>A recent study showed that patients who took part in the arts activities of Sheffield Teaching Hospitals experienced a 'significant 20% improvement in mood and significant reduction in levels of anxiety'.&nbsp;&nbsp;</p>
-      <p>Arts in Health also work to improve the physical environment within our hospitals. In 2015 we completed over 15 ward refurbishments. Arts in Health advise on interior design solutions and works closely with staff and patients to commission artists to create artworks for wards and public spaces.</p>
+    <div class="col-md-8">
+      <p class="lead">I completed a National NHS Graduate Management Scheme at the beginning of my career having left University and found it a wonderful entrance into the National Health Service. </p>
+      <p>After a number of roles within the NHS, I joined Sheffield Teaching Hospitals as a Chief Executive at the Northern General Hospital and during my time here have had two secondments to The Department of Health.</p>
+      <p>The first secondment was to almost immediately head up the Millennium Executive Team for the National Health Service which was preparing the NHS for the year 2000 date change and for the Winter. </p>
+      <p>The second was working as Director General at The Department of Health looking after all forms of providers and developing The Foundation Trust model.</p>
+      <p>When I came back to the Trust in 2004 I led the merger between the Central Sheffield University’s Hospitals NHS Trust and the Northern General NHS Trust and thereafter led the movement to us becoming a first wave Foundation Trust and what is now know as Sheffield Teaching Hospitals today.</p>
     </div>
     
-    <div class="col-md-4 col-md-offset-1">
+    <div class="col-md-3 col-md-offset-1">
       <aside class="sidebar"> 
         <h3>Sidebar title</h3>
         <p>This is where the things live</p>
