add image size and alignment classes

--- a/source/andrew-cash.html.erb
+++ b/source/andrew-cash.html.erb
@@ -23,6 +23,7 @@ title: Andrew Cash
     </div>
     
     <div class="col-md-8">
+      <%= image_tag "andrew_cash.jpg", class: "align-right", width: "250" %>
       <p class="lead">I completed a National NHS Graduate Management Scheme at the beginning of my career having left University and found it a wonderful entrance into the National Health Service. </p>
       <p>After a number of roles within the NHS, I joined Sheffield Teaching Hospitals as a Chief Executive at the Northern General Hospital and during my time here have had two secondments to The Department of Health.</p>
       <p>The first secondment was to almost immediately head up the Millennium Executive Team for the National Health Service which was preparing the NHS for the year 2000 date change and for the Winter. </p>
