--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -189,47 +189,34 @@ title: Graduate Management Scheme
         <p>Many of our present leaders launched their careers through similar NHS management schemes including <%= link_to "our current Chief Executive Sir Andrew Cash", "/andrew-cash.html" %>.</p>
         
         <div class="row">
-          
-          <div class="col-sm-6 col-md-8">
-            <article class="thumbnail graduate-profile">     
-              <section>
-                <% link_to "andrew-cash.html" do %>
-                  <%= image_tag "Andrew Cash Grad Scheme.jpg", class: "img-responsive", alt: "Sir Andrew Cash OBE" %>
-                <% end %>
-                <div class="caption">
-                  <h3 class="graduate-profile"><%= link_to "Sir Andrew Cash OBE", "/andrew-cash.html" %></h3>
-                  <p>I completed the National NHS Graduate Management Scheme ... <a href="#">Read more</a></p>
-                </div>
-              </section>
-            </article>
-          </div>
 
-          <div class="col-sm-6 col-md-4">
-            <article class="thumbnail graduate-profile">     
-              <section>
-                <% link_to "andrew-cash.html" do %>
-                  <%= image_tag "Andrew Cash Grad Scheme.jpg", class: "img-responsive", alt: "Sir Andrew Cash OBE" %>
-                <% end %>
-                <div class="caption">
-                  <h3 class="graduate-profile"><%= link_to "Sir Andrew Cash OBE", "/andrew-cash.html" %></h3>
-                  <p>I completed the National NHS Graduate Management Scheme ... <a href="#">Read more</a></p>
+          <div class="col-md-12">
+            <ul class="media-list">
+              <li class="media graduate-profile">
+                <div class="media-left">
+                  <% link_to "/andrew-cash.html" do %>
+                    <%= image_tag "andrew_cash.jpg", class: "media-object", alt: "Sir Andrew Cash OBE", width: "150" %>
+                  <% end %>
                 </div>
-              </section>
-            </article>
-          </div>
+                <div class="media-body">
+                  <h3 class="media-heading graduate-profile"><%= link_to "Sir Andrew Cash OBE", "/andrew-cash.html" %></h3>
+                  <p>I completed a National NHS Graduate Management Scheme at the beginning of my career having left University and found it a wonderful entrance into the National Health Service.  ... <%= link_to "read more", "/andrew-cash.html" %></p>
+                </div>
+              </li>
 
-          <div class="col-sm-6 col-md-4">
-            <article class="thumbnail graduate-profile">     
-              <section>
-                <% link_to "andrew-cash.html" do %>
-                  <%= image_tag "Andrew Cash Grad Scheme.jpg", class: "img-responsive", alt: "Sir Andrew Cash OBE" %>
-                <% end %>
-                <div class="caption">
-                  <h3 class="graduate-profile"><%= link_to "Sir Andrew Cash OBE", "/andrew-cash.html" %></h3>
-                  <p>I completed the National NHS Graduate Management Scheme ... <a href="#">Read more</a></p>
+              <li class="media graduate-profile">
+                <div class="media-left">
+                  <% link_to "/anna-hescott.html" do %>
+                    <%= image_tag "anna_hescott.png", class: "media-object", alt: "Anna Hescott", width: "150" %>
+                  <% end %>
                 </div>
-              </section>
-            </article>
+                <div class="media-body">
+                  <h3 class="media-heading graduate-profile"><%= link_to "Anna Hescott", "/anna-hescott.html" %></h3>
+                  <p>I joined Sheffield Teaching Hospitals straight off my graduate scheme to work within the Medicine and Pharmacy Care Group supporting performance monitoring, business planning and improvement of our services. ... <a href="#">Read more</a></p>
+                </div>
+              </li>
+            </ul>
+
           </div>
 
         </div>
