add maria profile

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -228,6 +228,18 @@ title: Graduate Management Scheme
                 </div>
               </li>
 
+              <li class="media graduate-profile">
+                <div class="media-left">
+                  <% link_to "/maria-makhonina.html" do %>
+                    <%= image_tag "maria_makhonina.jpg", class: "media-object", alt: "Maria Makhonina", width: "150" %>
+                  <% end %>
+                </div>
+                <div class="media-body">
+                  <h3 class="media-heading graduate-profile"><%= link_to "Maria Makhonina", "/maria-makhonina.html" %></h3>
+                  <p>After completing a graduate management scheme I joined a Service Improvement Team at Sheffield Teaching Hospitals and am working as an Improvement Facilitator working with a range of clinical teams across different ... <%= link_to "read more", "/maria-makhonina.html" %></p>
+                </div>
+              </li>
+
             </ul>
 
           </div>
