--- a/source/stylesheets/_typography.scss
+++ b/source/stylesheets/_typography.scss
@@ -58,11 +58,9 @@ body {
 
 .graduate-profile {
   
-  h3 {
-    
-    //font-size: 25px;
-    //margin: 0.5em 0;
-    
+  p {
+
+    font-size: 19px;
   }
 }
 
