update anna profile

--- a/source/anna-hescott.html.erb
+++ b/source/anna-hescott.html.erb
@@ -24,7 +24,7 @@ title: Anna Hescott
   <div class="row">
     <div class="col-md-8">
       <%= image_tag "anna_hescott.png", class: "align-right", width: "250" %>
-      <p class="lead">I joined Sheffield Teaching Hospitals straight off my graduate scheme to work within the Medicine and Pharmacy Care Group supporting performance monitoring, business planning and improvement of our services.</p>
+      <p class="lead">I joined Sheffield Teaching Hospitals straight after my graduate scheme to work within the Medicine and Pharmacy Care Group supporting performance monitoring, business planning and improvement of our services.</p>
       <p>This role is covering a period of maternity leave so I have recently secured my next role at the Trust as a Service Manager for Diabetes and Endocrinology. I look forward to learning more about these clinical services and continuing to learn about the organisation from a different perspective.</p>
       <p>My defining moment for the NHS for me, so far, was coordinating a successful business case for additional clinical staff for one of our services.</p>
       <p>There are many things I love about my job, but it isn’t always easy. It takes resilience and belief in what you’re doing to keep things moving forward for the benefit of our patients and colleagues.</p>
