--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -212,7 +212,7 @@ title: Graduate Management Scheme
                 </div>
                 <div class="media-body">
                   <h3 class="media-heading graduate-profile"><%= link_to "Anna Hescott", "/anna-hescott.html" %></h3>
-                  <p>I joined Sheffield Teaching Hospitals straight off my graduate scheme to work within the Medicine and Pharmacy Care Group supporting performance monitoring, business planning and improvement of our services. ... <%= link_to "read more", "/anna-hescott.html" %></p>
+                  <p>I joined Sheffield Teaching Hospitals straight after my graduate scheme to work within the Medicine and Pharmacy Care Group supporting performance monitoring, business planning and improvement of our services. ... <%= link_to "read more", "/anna-hescott.html" %></p>
                 </div>
               </li>
 
