--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -44,12 +44,14 @@ title: Graduate Management Scheme
         <h2 class="header-lg-space">About us</h2>
       </div>
       <div class="col-md-7">
-        <p>Sheffield Teaching Hospitals is one of the UK’s most successful NHS foundation trusts. We provide a full range of local hospital and community services for people in Sheffield, as well as specialist care for patients from further afield, including cancer, spinal cord injuries, renal and cardiothoracic services.</p>
-        <p>We have an ambitious vision to be recognised as the best provider of health, clinical research and education in the UK and a strong contributor to the aspiration of Sheffield to be a vibrant and healthy city.</p>
-        <p>Join us as a graduate management trainee and help make that vision a reality!</p>
+        <p>We are one of the UK's biggest and most successful providers of hospital and community based healthcare.</p>
+        <p>We provide comprehensive NHS services ranging from maternity services to care of the elderly. We provide services to Sheffield, South Yorkshire, Mid Yorkshire and North Derbyshire but also specialist services to all parts of the UK.</p>
+        <p>We have a long history of providing high quality care, clinical excellence and innovation in medical research and we are proud to have been awarded an overall rating of ‘Good’ following the latest Care Quality Commission inspection.</p>
+        <p>With around 16,500 employees working within our hospitals and out in the community, we are one of the biggest employers locally. We aim to reflect the diversity of local communities and are proud of our partnerships with local people, patients, neighbouring NHS organisations, local authority and charitable bodies.</p>
+        <p>Through our partnerships with the University of Sheffield, Sheffield Hallam University, other health and social care providers and industry we remain at the forefront of advancements in clinical services, teaching and research.</p>
       </div>    
       <div class="col-md-5">
-        <%= image_tag "stock-one.jpg", class: "img-responsive" %>
+        <%= image_tag "infographic.jpg", class: "img-responsive" %>
       </div>
     </div>
   </div>
@@ -64,35 +66,25 @@ title: Graduate Management Scheme
       </div>
       
       <div class="col-md-7">
-        <p>We’re offering a two year management training programme which will provide you with a rich experience helping lead the future of the NHS at Sheffield Teaching Hospitals.</p>
-        <p>The scheme will provide you with the skills, experiences and personal qualities you need to be a big success. Supported every step of the way by a buddy, mentor and our managers, you’ll take on new responsibilities from the very start and be given the chance to manage teams and projects.</p>
-        <p>During the scheme you’ll also be enrolled in the NHS Leadership Academy Mary Seacole programme and provided with their formal six month leadership development programme.</p>
+        <p>Our Graduate Management Scheme aims to develop individuals with potential into high calibre managers and leaders of the future.</p>
+        
+        <p>Joining the scheme will help you to develop the skills, behaviours, experiences and confidence you need to lead in a dynamic healthcare environment.</p>
+        
+        <p>During the scheme you will spend your time working alongside some of the most talented people in the NHS who will offers guidance and support.</p>
+
+        <h4>Two year programme</h4>
+        
+        <p>The two year programme will offer you many exciting new experiences to help lead NHS services in Sheffield that improve the lives of millions of people. The scheme will provide you with the opportunity to develop both professionally and personally, and allow you to gain an understanding of where your career aspirations lie.</p>
+        
+        <p>During the two years, you will complete both an operational placement and a corporate placement. This will give you a feel for working both on the 'front line' and behind the scenes and you will see how they come together to deliver high quality care for our patients.</p>
+
+        <p>Each work placement will differ depending on the department it is hosted by, and the duties aligned to the placement role. You can be assured that wherever you are placed within our complex and varied organisation, you will be presented with a broad range of exciting experiences and opportunities to develop your knowledge and skills whilst working alongside our passionate and committed staff.</p>
+
       </div>
       
       <div class="col-md-5">
-        <%= image_tag "stock-two.jpg", class: "img-responsive" %>
-      </div>
-      
-      <div class="col-md-12">
-        <h2 class="header-lg-space">About you</h2>
-      </div>
-      
-      <div class="col-md-7">
-        
-        <p>Doing the right thing for our patients, staff and the wider public and is what drives us and we’ll expect you to share our values. Successful candidates will:</p>
-        <ul>
-          <li>Be excellent communicators and able to form productive relationships and networks across departments within the Trust</li>
-          <li>Have excellent organisational skills </li>
-          <li>Be a self-starter and able to work on own initiative</li>
-          <li>Have a real interest in the NHS and a desire to contribute to its future success</li>
-          <li>Have a desire to learn new skills and undertake formal study leading to management and leadership qualifications</li>
-        </ul>  
-        
-        <p>We are looking for strong team players from a variety of backgrounds, committed to the values of the NHS, with the passion, drive and ability to influence and deliver at all levels.  </p>
-        <p>We are committed to recruiting people from a range of different backgrounds and would particularly welcome applications from candidate’s underrepresented in leadership roles.</p>
-        <p>The 2 year programme will commence on 16 October 2017 and all successful candidates must be available to commence in post on this date.</p>
-      </div>    
-      <div class="col-md-5">
+        <%= image_tag "graduate_one_sm.jpg", class: "img-responsive img-footing" %>
+
         <div class="card card-colourful card-feature card-reasons">
           <h3>In numbers</h3>
           <ol class="list-unstyled list-featured">
@@ -116,6 +108,23 @@ title: Graduate Management Scheme
 
         </div>
       </div>
+      
+      <div class="col-md-12">
+        <h2 class="header-lg-space">About you</h2>
+      </div>
+      
+      <div class="col-md-7">
+        
+        <p>Doing the right thing for our patients, staff and the wider public is what drives us and we’ll expect you to share our values.</p>
+
+        <p>We are seeking to recruit people that can demonstrate they have the necessary qualifications, skills, qualities and values that give them the potential to succeed in a leadership or managerial role within the NHS.</p>
+
+        <p>We are committed to recruiting people from a range of different backgrounds and would particularly welcome applications from candidate’s underrepresented in leadership roles.</p>
+        <p>Prior to applying for a place on the scheme, please download and read through the <a title="Graduate Scheme NHS Jobs description" href="#">Job Description and Person Specification for the role</a>.</p>
+      </div>    
+      <div class="col-md-5">
+        <%= image_tag "graduate_two_sm.jpg", class: "img-responsive img-footing" %>
+      </div>
     </div>
   </div>
 </section>
@@ -130,14 +139,21 @@ title: Graduate Management Scheme
       
       <div class="col-md-7">
         <p>More details about the graduate management scheme can be found in our <%= link_to "job description and person specification", "./documents/Sheffield Teaching Hospitals NHS Foundation Trust Graduate Management Scheme.pdf" %>.</p>
-        <p>If you have any questions or would like to register your interest, <a href="mailto:GraduateScheme@sth.nhs.uk">contact us by emailing GraduateScheme@sth.nhs.uk</a></p>
+        <p>If you have any questions <a href="mailto:GraduateScheme@sth.nhs.uk">contact us by emailing GraduateScheme@sth.nhs.uk</a>.</p>
         <p>Please note that the 2 year programme will commence on 16 October 2017 and all successful candidates must be available to commence in post on this date.</p>
+        <div class="card card-colourful card-feature card-cta img-footing">
+          <h3 id="">Interested?</h3>
+          <a class="btn btn-wire" href="#">Help shape the future of the NHS</a>
+        </div>
       </div>
       
       <div class="col-md-4 col-md-offset-1">
         <% link_to "./documents/Sheffield Teaching Hospitals NHS Foundation Trust Graduate Management Scheme.pdf" do %>
           <%= image_tag "thumbnail.jpg", class: "img-responsive" %>
         <% end %>
+        <div class="block">
+          <%= link_to "Download booklet" , "./documents/Sheffield Teaching Hospitals NHS Foundation Trust Graduate Management Scheme.pdf"%>
+        </div> 
       </div>
       
       <div class="col-md-12">
@@ -255,6 +271,11 @@ title: Graduate Management Scheme
 
           </div>
 
+        </div>
+
+        <div class="card card-colourful card-feature card-cta">
+          <h4>Apply now</h4>
+          <a class="btn btn-wire" href="#">Help shape the future of the NHS</a>
         </div>
        
       </div>
