fix missing link

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -120,7 +120,7 @@ title: Graduate Management Scheme
         <p>We are seeking to recruit people that can demonstrate they have the necessary qualifications, skills, qualities and values that give them the potential to succeed in a leadership or managerial role within the NHS.</p>
 
         <p>We are committed to recruiting people from a range of different backgrounds and would particularly welcome applications from candidate’s underrepresented in leadership roles.</p>
-        <p>Prior to applying for a place on the scheme, please download and read through the <a title="Graduate Scheme NHS Jobs description" href="#">Job Description and Person Specification for the role</a>.</p>
+        <p>Prior to applying for a place on the scheme, please download and read through the <a title="Graduate Scheme NHS Jobs description" href="http://www.jobs.nhs.uk/xi/vacancy/cd19a5d0ab59b46cb0bbb1f7abc4ac79/?vac_ref=914626268">Job Description and Person Specification for the role</a>.</p>
       </div>    
       <div class="col-md-5">
         <%= image_tag "graduate_two_sm.jpg", class: "img-responsive img-footing" %>
@@ -143,7 +143,7 @@ title: Graduate Management Scheme
         <p>Please note that the 2 year programme will commence on 16 October 2017 and all successful candidates must be available to commence in post on this date.</p>
         <div class="card card-colourful card-feature card-cta img-footing">
           <h3 id="">Interested?</h3>
-          <a class="btn btn-wire" href="#">Help shape the future of the NHS</a>
+          <a class="btn btn-wire" href="http://www.jobs.nhs.uk/xi/vacancy/cd19a5d0ab59b46cb0bbb1f7abc4ac79/?vac_ref=914626268">Help shape the future of the NHS</a>
         </div>
       </div>
       
@@ -163,7 +163,7 @@ title: Graduate Management Scheme
       <div class="col-md-4">
         <h3 class="graduate-step" id="step1">1.</h3>
         <h4>Online application <span class="glyphicon glyphicon-graduate-menu" aria-hidden="true"></span></h4>
-        <p>Your application must be submitted via <a>the NHS Jobs by completing the online application form</a>. Candidates are encouraged to read the associated documentation prior to completing and submitting their application.</p>
+        <p>Your application must be submitted via <a href="http://www.jobs.nhs.uk/xi/vacancy/cd19a5d0ab59b46cb0bbb1f7abc4ac79/?vac_ref=914626268">the NHS Jobs by completing the online application form</a>. Candidates are encouraged to read the associated documentation prior to completing and submitting their application.</p>
         <p>Applications will be reviewed within 14 days from the advertisement being closed. If you successfully demonstrate how you meet the essential criteria you will be shortlisted to progress further through the application process.</p>
       </div>
       
@@ -188,7 +188,7 @@ title: Graduate Management Scheme
           <p>
             Gain the skills, knowledge and confidence to make real improvements to the NHS.
           </p>
-          <a class="btn btn-wire" href="#">Help shape the future of the NHS</a>
+          <a class="btn btn-wire" href="http://www.jobs.nhs.uk/xi/vacancy/cd19a5d0ab59b46cb0bbb1f7abc4ac79/?vac_ref=914626268">Help shape the future of the NHS</a>
         </div>
       </div>
       
@@ -275,7 +275,7 @@ title: Graduate Management Scheme
 
         <div class="card card-colourful card-feature card-cta">
           <h4>Apply now</h4>
-          <a class="btn btn-wire" href="#">Help shape the future of the NHS</a>
+          <a class="btn btn-wire" href="http://www.jobs.nhs.uk/xi/vacancy/cd19a5d0ab59b46cb0bbb1f7abc4ac79/?vac_ref=914626268">Help shape the future of the NHS</a>
         </div>
        
       </div>
