--- a/source/partials/_navbar.html.erb
+++ b/source/partials/_navbar.html.erb
@@ -16,7 +16,7 @@
     <div class="row">
     <div class="navbar-header">
       
-      <%= link_to "Apply now", "/index.html#apply", class: "btn btn-primary btn-wire navbar-btn navbar-right hidden-sm hidden-md hidden-lg" %>
+      <%= link_to "Apply now", "http://www.jobs.nhs.uk/xi/vacancy/cd19a5d0ab59b46cb0bbb1f7abc4ac79/?vac_ref=914626268", class: "btn btn-primary btn-wire navbar-btn navbar-right hidden-sm hidden-md hidden-lg" %>
 
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
@@ -39,7 +39,7 @@
           <%= link_to "The Scheme", "/index.html#theScheme" %>
         </li>
         <li>
-          <%= link_to "Apply now", "/index.html#apply" %>
+          <%= link_to "Apply now", "http://www.jobs.nhs.uk/xi/vacancy/cd19a5d0ab59b46cb0bbb1f7abc4ac79/?vac_ref=914626268" %>
         </li>
       </ul>
     </div>
