--- a/source/partials/_featured-block.html
+++ b/source/partials/_featured-block.html
@@ -5,6 +5,6 @@
     <p>
       Gain the skills, knowledge and confidence to make real improvements to the NHS.
     </p>
-    <a class="btn btn-wire" href="#">Help shape the future of the NHS</a>
+    <a class="btn btn-wire" href="http://www.jobs.nhs.uk/xi/vacancy/cd19a5d0ab59b46cb0bbb1f7abc4ac79/?vac_ref=914626268">Help shape the future of the NHS</a>
   </div>
 </div>
