--- a/source/partials/_metatags.html.erb
+++ b/source/partials/_metatags.html.erb
@@ -14,4 +14,4 @@
 <meta property="og:url" content="http://www.sth.nhs.uk/graduate" />
 <meta property="og:image" content="https://grillopress.github.io/graduate-scheme/images/iStock-516039768_sm.jpg" />
 <meta property="og:description" content="Apply now to our new NHS Graduate Management Scheme" />
-<%= favicon_tag 'images/favicon-96x96.png' %>
+<%= favicon_tag 'images/favicon.png' %>
